# Univ

./: .gitignore  README.md
M1/S1/Design_Pattern/Paint/: draw-big.txt  draw-small.txt  draw1.txt  draw2.txt  makeSPIJar.sh
M1/S1/Java/TP10/: README.md
M1/S1/Java/TP11/: README.md
M1/S1/Java/TP9/: README.md
M1/S1/Optimisation/LpSolve/: alu.lp  decoupe.py  exemple1.lp  exo1.lp  exo2.lp  exo3.lp  generic.py  output.lp  test.lp
M1/S1/Optimisation/SAT/: README.md  grid4x4-1.cnf  grid4x4-1.out  mystere.cnf  mystere.out  sudoku.cnf  sudoku.out  sudoku.py
M1/S2/CPP/chap-01/: 1-hello_world.cpp  2-parrot.cpp  3-array.cpp  4-calculator.cpp
M1/S2/CPP/chap-02/: 1-first_class.cpp  2-constructor.cpp  3-clone.cpp
M1/S2/CPP/chap-05/: 1-vectors.cpp
M1/S2/CPP/tp-01/: CMakeLists.txt  README.md  ex4.cpp  translator.cpp
M1/S2/CPP/tp-02/: CMakeLists.txt  Clock.h  Event.h  Histogram.cpp  Histogram.h  Main.cpp  MinuteHand.h  Reminders.cpp  SecondHand.h
M1/S2/Linguistic/TP1/: README.md
M1/S2/Perl/TP1/: ex3.pl  ex4.pl  ex5.pl  ex6.pl  ex7.pl  ex8.pl  ex9.pl  mystere.pl  test.pl
M1/S2/Perl/TP2/: ex1.pl  ex2.pl  ex3.pl  ex4.pl
M1/S2/Perl/TP3/: ex1.pl  ex2.pl  ex3.pl  ex4.pl  test.pl
M1/S2/Perl/TP4/: Disk.pm  Fetard.pm  MyModule.pm  Person.pm  Ring.pm  Soiree.pm  ex2.pl  ex3.pl  ex4.pl
M1/S2/Perl/TP5/: ex1.pl  ex2.pl  ex3.pl  ex4.pl  ex5.pl
M1/S2/Perl/TP6/: ex2.pl  index.pl
M1/S2/SImage/KITLIBGX2022/: KITLIBGX2022.cloud.txt  install.sh
M1/S2/SImage/KITLIBGX2022V2/: LISEZMOI  install.sh
M1/S2/TImage/TP04/: CMakeLists.txt
M1/S2/TImage/TP1/: CMakeLists.txt
(+393 files in other folders)
