add_executable(tp2-reminders
    Reminders.cpp
    Event.h
    Parsing.cpp
    Parsing.h
    Main.cpp
    MinuteHand.h
    SecondHand.h
    Clock.h
)

add_executable(tp2-histogram
    Histogram.cpp
    Histogram.h
)


add_executable(tp2-minute
    Main.cpp
    MinuteHand.h
    SecondHand.h
    Clock.h
)